# ChangeLog for net-misc/neon
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.105 2008/04/19 09:38:13 hollow Exp $

  19 Apr 2008; Benedikt Böhm <hollow@gentoo.org> neon-0.28.1.ebuild,
  neon-0.28.2.ebuild:
  fix socks support wrt #217538

*neon-0.28.2 (13 Apr 2008)

  13 Apr 2008; Benedikt Böhm <hollow@gentoo.org> +neon-0.28.2.ebuild:
  version bump wrt #216240

  13 Apr 2008; Benedikt Böhm <hollow@gentoo.org> neon-0.28.1.ebuild:
  fix documentation install; re-drop mips and ppc keywords due to repoman
  being a bitch and not checking for masked ebuilds anymore

  13 Apr 2008; Benedikt Böhm <hollow@gentoo.org>
  -files/neon-0.27.2-linguas.patch, neon-0.26.4.ebuild, -neon-0.27.2.ebuild,
  neon-0.28.1.ebuild:
  fix sock support; remove old version

  23 Mar 2008; Benedikt Böhm <hollow@gentoo.org> neon-0.28.1.ebuild:
  fix LINGUAS

*neon-0.28.1 (22 Mar 2008)

  22 Mar 2008; Benedikt Böhm <hollow@gentoo.org> +neon-0.28.1.ebuild:
  version bump wrt #210532

  27 Jan 2008; Benedikt Böhm <hollow@gentoo.org>
  +files/neon-0.27.2-linguas.patch, neon-0.27.2.ebuild:
  fix #205959

*neon-0.27.2 (27 Jan 2008)

  27 Jan 2008; Benedikt Böhm <hollow@gentoo.org> -neon-0.26.1-r1.ebuild,
  -neon-0.26.3.ebuild, +neon-0.27.2.ebuild:
  version bump; cleanup; #198753

  02 Jan 2008; Jeroen Roovers <jer@gentoo.org> neon-0.26.4.ebuild:
  Stable for HPPA (bug #203260).

  30 Dec 2007; Samuli Suominen <drac@gentoo.org> neon-0.26.4.ebuild:
  amd64 stable wrt #203260

  29 Dec 2007; Raúl Porcel <armin76@gentoo.org> neon-0.26.4.ebuild:
  alpha/ia64/sparc stable wrt #203260

  29 Dec 2007; Brent Baude <ranger@gentoo.org> neon-0.26.4.ebuild:
  Marking neon-0.26.4 ppc64 for bug 203260

  28 Dec 2007; Markus Meier <maekke@gentoo.org> neon-0.26.4.ebuild:
  x86 stable, bug #203260

  28 Dec 2007; nixnut <nixnut@gentoo.org> neon-0.26.4.ebuild:
  Stable on ppc wrt bug 203560
