@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/neon
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.105 2008/04/19 09:38:13 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/neon/ChangeLog,v 1.106 2008/06/01 12:08:15 hollow Exp $
+
+  01 Jun 2008; Benedikt Böhm <hollow@gentoo.org> neon-0.26.4.ebuild,
+  -neon-0.28.1.ebuild:
+  fix #219888
 
   19 Apr 2008; Benedikt Böhm <hollow@gentoo.org> neon-0.28.1.ebuild,
   neon-0.28.2.ebuild:
